<resources>
    <string name="app_name">Food Fiesta</string>
    <string name="customer_login_username_hint">Your Phone</string>
    <string name="customer_login_password_hint">Password</string>
    <string name="register_passowrd">Set a strong password</string>
    <string name="customer_login_button_text">Login</string>
    <string name="customer_register_button_text">Register</string>
    <string name="user_profile_edit_button_text">Edit Profile</string>
    <string name="register_account">No Account? Create Here! </string>
    <string name="existing_account_text">Already have an account? Log in </string>
    <string name="full_name">Your Full Name </string>
    <string name="address">Your Address</string>
    <string name="selector_buyer">I am here to order food</string>
    <string name="selector_seller">I am here to sell food</string>
    <string name="customer_transaction_header">Payments</string>
    <string name="customer_payment_card">Your cards</string>
    <string name="customer_payment_cash">Your cash credits</string>
    <string name="customer_transaction_add_card">Add cards</string>
    <string name="customer_transaction_current_cash_credit">Your current balance is: </string>
    <string-array name="planets_array">
        <item>I am here to order food</item>
        <item>I am here to sell food</item>
    </string-array>


</resources>